_archive/content-services/4.2/glossary/glossary_e.md
---
author: [Alfresco Documentation, Alfresco Documentation]
source: 
audience: 
category: Glossary
option: glossary
---

# E

Glossary terms starting with the letter E.

[A](glossary_a.md) \| [B](glossary_b.md) \| [C](glossary_c.md) \| [D](glossary_d.md) \| [E](glossary_e.md) \| [F](glossary_f.md) \| [G](glossary_g.md) \| [H](glossary_h.md) \| [I](glossary_i.md) \| [J](glossary_j.md) \| [K](glossary_k.md) \| [L](glossary_l.md) \| [M](glossary_m.md) \| [N](glossary_n.md) \| [O](glossary_o.md) \| [P](glossary_p.md) \| [Q](glossary_q.md) \| [R](glossary_r.md) \| [S](glossary_s.md) \| [T](glossary_t.md) \| [U](glossary_u.md) \| [V](glossary_v.md) \| [W](glossary_w.md) \| [X](glossary_x.md) \| [Y](glossary_y.md) \| [Z](glossary_z.md)

-   **ECM**

    See Enterprise Content Management.

-   **Embedded API**

    Embedded APIs are used by custom extensions executed directly against the content application server. Alfresco provides three main embedded APIs - Alfresco Java Foundation API, JavaScript API and Template API.

-   **Enterprise Content Management**

    Enterprise Content Management \(ECM\) is a set of technologies used to capture, store, preserve and deliver content and documents and content related to organizational processes. ECM tools and strategies allow the management of an organization's unstructured information, wherever that information exists.

    Source: [http://en.wikipedia.org/wiki/Enterprise\_content\_management](http://en.wikipedia.org/wiki/Enterprise_content_management)

-   **Enterprise to Cloud Sync**

    The Alfresco Enterprise to Cloud Sync feature lets you work with your content without you needing access to the on-premise system. After you synchronize content to the cloud, the on-premise and cloud instances of your content are automatically synchronized with each other whenever either version is updated. This relationship continues until you unsync the content.

-   **Exchangeable Image File Format**

    Exchangeable Image File Format \(EXIF\) is a metadata standard used to store technical imformation about digital images. Software such as [ExifTool](http://www.sno.phy.queensu.ca/~phil/exiftool/) allows you to manipulate this metadata.

-   **execution script**

    It is possible to create web scripts relying only on the scripting capabilities of FreeMarker templating language. However, an optional execution script gives the web script greater flexibility, especially when creating and/or updating Alfresco objects. An execution script may be written in JavaScript or Java.

-   **EXIF**

    See Exchangeable Image File Format.

-   **<extension\>**

    The <extension\> directory is where you store files that extend and override the Alfresco default files. When Alfresco is installed, there are sample files in this directory. Many of these files have a .sample suffix, which must be removed to activate the file.

    For example: for Tomcat, <extension\> is:`<TOMCAT_HOME>/shared/classes/alfresco/extension/`


